name: Yampa-core
version: 0.1.0
cabal-version: >= 1.6
license: BSD3
license-file: LICENSE
author: Henrik Nilsson, Antony Courtney
maintainer: Mykola Orliuk (virkony@gmail.com)
homepage: https://github.com/ony/Yampa-core
category: Reactivity, FRP
synopsis: Library for programming hybrid systems.

description:  Domain-specific language embedded in Haskell for programming
              hybrid (mixed discrete-time and continuous-time) systems. Yampa is based on
              the concepts of Functional Reactive Programming (FRP) and is structured using
              arrow combinators. Yampa-core is a version of Yamp that delegates most of
              to other Haskell libraries like deepseq and vector-space.

build-type: Simple
extra-source-files:
  tests/AFRPTests.hs,         tests/AFRPTestsCommon.hs,        tests/AFRPTestsArr.hs,
  tests/AFRPTestsComp.hs,     tests/AFRPTestsFirstSecond.hs,   tests/AFRPTestsLaws.hs,
  tests/AFRPTestsLoop.hs,     tests/AFRPTestsLoopLaws.hs,      tests/AFRPTestsBasicSF.hs,
  tests/AFRPTestsSscan.hs,    tests/AFRPTestsEvSrc.hs,         tests/AFRPTestsCOC.hs,
  tests/AFRPTestsSwitch.hs,   tests/AFRPTestsKSwitch.hs,       tests/AFRPTestsRSwitch.hs,
  tests/AFRPTestsPSwitch.hs,  tests/AFRPTestsRPSwitch.hs,      tests/AFRPTestsWFG.hs,
  tests/AFRPTestsAccum.hs,    tests/AFRPTestsPre.hs,           tests/AFRPTestsDelay.hs,
  tests/AFRPTestsDer.hs,      tests/AFRPTestsLoopPre.hs,       tests/AFRPTestsLoopIntegral.hs,
  tests/AFRPTestsReact.hs,    tests/AFRPTestsEmbed.hs,         tests/AFRPTestsUtils.hs,
  tests/AFRPTestsTask.hs,     tests/testAFRPMain.hs,

  examples/Elevator/Elevator.hs,
  examples/Elevator/TestElevatorMain.hs,
  examples/TailgatingDetector/TailgatingDetector.hs,
  examples/TailgatingDetector/TestTGMain.hs

library
  hs-source-dirs:  src
  ghc-options : -O3 -Wall -fno-warn-name-shadowing
  extensions: GADTs, TypeFamilies, Rank2Types, CPP, Arrows, FlexibleContexts
  build-Depends: base < 5, random, vector-space >= 0.5, deepseq >= 1.1
  exposed-modules:
    FRP.Yampa
    FRP.Yampa.Event
    FRP.Yampa.MergeableRecord
    FRP.Yampa.Utilities
    FRP.Yampa.Miscellany
    FRP.Yampa.Task
    FRP.Yampa.Internals
  other-modules:
    FRP.Yampa.Diagnostics

source-repository head
  type:     git
  location: git://github.com/giorgidze/Yampa.git

source-repository head
  type:     git
  location: git://github.com/ony/Yampa-core.git
